[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_block_json'
version = '0.7.197'

[dependencies]
base64 = '0.13'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4.0'
log = '^0.4'
metrics = '0.21.0'
num = '0.4'
num-traits = '0.2'
serde = '1.0'
serde_derive = '1.0'
serde_json = { features = [ 'preserve_order' ], version = '1.0' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = 'pre_tmp-rc' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = 'pre_tmp-rc' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = 'pre_tmp-rc' }

