[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever_block_json'
version = '0.8.4'

[dependencies]
base64 = '0.13'
failure = '0.1'
hex = '0.4'
lazy_static = '1.4.0'
log = '^0.4'
metrics = '0.21.0'
num = '0.4'
num-traits = '0.2'
serde = '1.0'
serde_derive = '1.0'
serde_json = { features = [ 'preserve_order' ], version = '1.0' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', branch = 'feature-mesh' }
ever_block = { git = 'https://github.com/tonlabs/ever-block.git', branch = 'feature-mesh' }

[dev-dependencies]
pretty_assertions = '1.3'